--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,8 @@ body {
 
   color: #000000;
 }
-.about-description {
+.about-description,
+.about-project {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -46,6 +47,11 @@ body {
   color: #595959;
   width: 400px;
   text-align: justify;
+}
+.about-project {
+  color: #888888;
+  margin: 0px;
+  margin-left: 9px;
 }
 
 /* project styles */
@@ -180,7 +186,8 @@ body {
 }
 .contacts,
 .Tech-skills,
-.Soft-skills {
+.Soft-skills,
+.languages-skills {
   margin-left: 40px;
   margin-bottom: 45px;
 }
@@ -223,13 +230,15 @@ body {
   text-align: center;
 }
 .Tech-skills-list,
-.Soft-skills-list {
+.Soft-skills-list,
+.languages-list {
   color: #ffffff;
   padding: 0px;
   margin: 17px;
 }
 .Tech-skills-item,
-.Soft-skills-item {
+.Soft-skills-item,
+.languages-item {
   color: #fb6d3a;
   font-style: normal;
   font-weight: 400;
@@ -237,7 +246,8 @@ body {
   line-height: 24px;
 }
 .Tech-skills-text,
-.Soft-skills-text {
+.Soft-skills-text,
+.languages-item-text {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
