--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0px;
+}
+
+ul {
+  margin: 0px;
+  padding-left: 0;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #f5f7fa;
@@ -8,14 +23,14 @@ body {
 .main {
   display: flex;
   flex-direction: row-reverse;
-  width: 1200px;
+  width: 1000px;
   margin: 0 auto;
 }
 /* main content style */
 .main_content {
   background-color: #ffffff;
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
-  padding: 105px 90px;
+  padding: 40px 40px;
 }
 /* about style */
 .about {
@@ -45,13 +60,15 @@ body {
   font-size: 14px;
   line-height: 24px;
   color: #595959;
-  width: 400px;
+  width: 600px;
   text-align: justify;
+  margin-top: 5px;
 }
 .about-project {
   color: #888888;
   margin: 0px;
   margin-left: 9px;
+  width: 576px;
 }
 
 /* project styles */
@@ -148,6 +165,7 @@ body {
 .work-list {
   padding: 0px;
   margin: 15px;
+  width: 600px;
 }
 .work-list-item {
   font-weight: 400;
