--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,7 @@ body {
   margin-left: 40px;
   margin-bottom: 45px;
 }
+
 .contacts p {
   margin: 0px;
   height: 24px;
@@ -219,6 +220,7 @@ body {
   font-weight: 700;
   font-size: 22px;
   line-height: 27px;
+  margin-bottom: 15px;
 }
 .contact_type {
   font-weight: 700;
